AB#1085 Refactor loop detection code
Make code DRY'er and easier to re-use.
Extend the loop detection tests.